<resources>
    <string name="app_name">Food App</string>
    <string name="title_head">Food Delivery App</string>
    <string name="title_body">
        It\'s an app where you choose foods from available registered restaurants and cafes adding them to your basket. Upon successful payment for the basket,
        your food is packed for delivery by our delivery services.
        The app is integrated with Safaricom daraja lipa-na-mpesa online (paybill) for paying the basket.
        Africa\'s Talking SMS API for communicating or updates to the customers individually or bulky.
        Google Maps for easier choose of restaurants registered on the map and tracking between the delivery guy\'s location and your location.
    </string>
    <string name="login">Login</string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="google">Sign in with Google</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="hello"></string>
    <string name="profilePhoto">Select Profile Photo</string>
    <string name="txtAgreement">By creating your Mashakura Dish Account, you also have agreed to my terms and conditions.</string>
    <string name="policy">Privacy Policy Licence Agreements</string>
    <string name="back">Back</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verify">Enter Verification Code</string>
    <string name="we_sent_an_sms">We sent an SMS verification code to</string>
    <string name="email">Email</string>
    <string name="username">Name</string>
    <string name="phone">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="send">Send</string>
    <string name="verificationBtn">Verify Account</string>
    <string name="txtFP">Please enter your Email address</string>
    <string name="todo">Image Of Forget Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="new_user">New User?</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="resend_a_new_code">Resend a new code</string>
    <string name="din_t_receive_any_sms_verification_code">Didn\'t receive any SMS Verification code?</string>
    <string name="time_to_exp">2:59 sec</string>
    <string name="code_expires_in">Code expires in</string>
    <string name="hello_">Hello, Nathan.</string>
    <string name="what_would_you_like_n_to_eat_today">What would you like \nto eat today?</string>
    <string name="favourite">Favourite</string>
    <string name="num_restaurants_total">. 10 Restaurants</string>
    <string name="restaurant_name">The Tav, Westlands</string>
    <string name="res_likes">256</string>
    <string name="img_welcome">Welcome Image</string>
    <string name="cafe_name">Pizza Inn</string>
    <string name="cafe_location">Thika, Kiambu</string>
    <string name="cafe_rates">4,5</string>
    <string name="cafe_likes">(202)</string>
    <string name="cafe_delivery">Delivery Kes 200</string>
    <string name="cafe_delivery_time">30 min</string>
    <string name="category_name">Cakes</string>
    <string name="category_places_count">590 Places</string>
    <string name="cafe_title">Cafe</string>
    <string name="total_cafes_count">300 Places</string>
    <string name="text_filter">Filter</string>
    <string name="home">Home</string>
    <string name="basket">Orders</string>
    <string name="cart">Cart</string>
    <string name="person">Profile</string>
    <string name="address">Address</string>
    <string name="get_started">Get Started</string>
    <string name="end">~End~</string>
    <string name="help">Help</string>
    <string name="my_profile">My Profile</string>
    <string name="verification_phone">+254 797 378891</string>
    <string name="categories">Categories</string>
    <string name="_10_categories">. 10 Categories</string>
    <string name="working_hrs">8am - 3pm</string>
    <string name="minimal_order">Minimal Order:- Kes 200</string>
    <string name="menu">Menu</string>
    <string name="view_all">View all</string>
    <string name="food_name">Rice Chicken</string>
    <string name="food_description">Chicken, Rice, Brocolli</string>
    <string name="food_pricing">Ksh 350.00</string>
    <string name="btnBuy">Buy</string>
    <string name="image_of_food">image of food</string>
    <string name="notifications">Notifications</string>
    <string name="delivery_distance">2.3km</string>
    <string name="foodTitle">Classic Cheese Burger Fries</string>
    <string name="food_small_desc">100g/piece</string>
    <string name="addToOrdersCart">Add</string>
    <string name="foodLargeDesc">Cheddar cheese, lettuce, tomato, sweet red onions and pickles on a 100% Angus beef burger, prepared medium well and served on a brioche bun.</string>
    <string name="orderFoodIngredients">Ingredients:</string>

</resources>
