<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeMenuBottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>
    <item
        android:id="@+id/ordersMenuBottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_local_mall_black_24dp"
        android:title="@string/basket"/>
    <item
        android:id="@+id/cartMenuBottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/cart"/>
    <item
        android:id="@+id/notificationMenuBottomNav"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"/>

</menu>