<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".ForgotPasswordActivity">


    <TextView
        android:id="@+id/txtBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_arrow_back_black_24dp"
        android:fontFamily="@font/msb"
        android:text="@string/back"
        android:textColor="@color/colorDark"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_undraw_forgot_password_gi2d"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/colorDark"
        android:fontFamily="@font/msb"
        android:textSize="21sp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFP"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"
        android:fontFamily="@font/mm"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mm"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        />


    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/msb"
        android:text="@string/send"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:icon="@drawable/ic_send_black_24dp"
        app:iconGravity="textEnd" />

</LinearLayout>