<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/txtHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:fontFamily="@font/mb"
        android:textColor="@color/colorDark"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="?attr/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_email_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mm"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorAccent"
        app:endIconMode="password_toggle"
        app:hintTextColor="?attr/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/txtForgotPword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_lock_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mm"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/mm"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"

        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/msb"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mm"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/noaccount" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/msb"
            android:textSize="15sp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/signInWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/mm"
        android:text="@string/google"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/signInWithFb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/signInWithFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/mm"
        android:text="@string/facebook"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_facebook_f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>