<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <!-- Media -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="110dp"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center"
                >
                <ImageView
                    android:id="@+id/imgFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/kfc"
                    android:scaleType="centerCrop"
                    android:contentDescription= "@string/image_of_food"/>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="vertical"
                android:paddingHorizontal="1dp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txtFoodTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_name"
                    android:textColor="@color/colorDark"
                    android:fontFamily="@font/msb"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingTop="5dp"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/txtFoodDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food_description"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/mm"
                    android:textSize="12sp"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:paddingTop="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    >
                    <TextView
                        android:id="@+id/txtFoodPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/food_pricing"
                        android:fontFamily="@font/msb"
                        android:textSize="14sp"
                        android:textColor="@color/colorPrimaryDark"
                        />
                    <Button
                        android:id="@+id/btnBuyFood"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/btnBuy"
                        android:fontFamily="@font/msb"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>